force-app/main/default/objects/Student__c/Student__c.object-meta.xml
<CustomObject>
    <pluralLabel>Students</pluralLabel>
    <fullName>Student__c</fullName>
    <description>It represents a student and their current academic situation in UniHub.</description>
    <nameField>
        <label>Student Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <label>Student</label>
</CustomObject>