force-app/main/default/objects/Student__c/fields/AcademicYear__c.field-meta.xml
<CustomField>
    <fullName>AcademicYear__c</fullName>
    <label>Academic Year</label>
    <precision>1</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>