force-app/main/default/objects/Student__c/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <label>Address</label>
    <type>Address</type>
</CustomField>