force-app/main/default/objects/Student__c/fields/RUT__c.field-meta.xml
<CustomField>
    <fullName>RUT__c</fullName>
    <label>RUT</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>