force-app/main/default/objects/Student__c/fields/UniversityCareer__c.field-meta.xml
<CustomField>
    <fullName>UniversityCareer__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>University Career</label>
    <referenceTo>UniversityCareer__c</referenceTo>
    <relationshipLabel>Students</relationshipLabel>
    <relationshipName>Students</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>