force-app/main/default/objects/Student__c/validationRules/Student_Academic_Year_Valid.validationRule-meta.xml
<ValidationRule>
    <fullName>Student_Academic_Year_Valid</fullName>
    <active>true</active>
    <description>
        Requires the student's academic year to be a valid value.
    </description>
    <errorConditionFormula>
        OR(
            AcademicYear__c &lt; 1,
            AcademicYear__c &gt; UniversityCareer__r.DurationYears__c
        )
    </errorConditionFormula>
    <errorMessage>
        Academic Year must be between 1 and the duration of the selected University Career.
    </errorMessage>
</ValidationRule>