force-app/main/default/objects/Student__c/validationRules/Student_Address_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Student_Address_Required</fullName>
    <active>true</active>
    <description>
        Requires the student's city, state/province, and country.
    </description>
    <errorConditionFormula>
        OR(
            ISBLANK(Address__City__s),
            ISBLANK(TEXT(Address__StateCode__s)),
            ISBLANK(TEXT(Address__CountryCode__s))
        )
    </errorConditionFormula>
    <errorMessage>
        City, State/Province, and Country are required.
    </errorMessage>
</ValidationRule>