force-app/main/default/objects/Student__c/validationRules/Student_RUT_Check_Digit_Valid.validationRule-meta.xml
<ValidationRule>
    <fullName>Student_RUT_Check_Digit_Valid</fullName>
    <active>true</active>

    <description>
        Validates the check digit of the student's Chilean RUT using modulus 11.
    </description>

    <errorConditionFormula>
        IF(
            REGEX(RUT__c, "^[0-9]{8}-[0-9K]$"),
            NOT(
                RIGHT(RUT__c, 1) =
                CASE(
                    MOD(
                        VALUE(MID(RUT__c, 1, 1)) * 3 +
                        VALUE(MID(RUT__c, 2, 1)) * 2 +
                        VALUE(MID(RUT__c, 3, 1)) * 7 +
                        VALUE(MID(RUT__c, 4, 1)) * 6 +
                        VALUE(MID(RUT__c, 5, 1)) * 5 +
                        VALUE(MID(RUT__c, 6, 1)) * 4 +
                        VALUE(MID(RUT__c, 7, 1)) * 3 +
                        VALUE(MID(RUT__c, 8, 1)) * 2,
                        11
                    ),
                    0, "0",
                    1, "K",
                    2, "9",
                    3, "8",
                    4, "7",
                    5, "6",
                    6, "5",
                    7, "4",
                    8, "3",
                    9, "2",
                    10, "1",
                    ""
                )
            ),
            false
        )
    </errorConditionFormula>

    <errorMessage>
        The RUT check digit is invalid.
    </errorMessage>
</ValidationRule>