force-app/main/default/objects/Student__c/validationRules/Student_RUT_Format_Valid.validationRule-meta.xml
<ValidationRule>
    <fullName>Student_RUT_Format_Valid</fullName>
    <active>true</active>
    <description>
        Validates the format of the student's RUT.
    </description>
    <errorConditionFormula>
        NOT(
            REGEX(RUT__c, "^[0-9]{8}-[0-9K]$")
        )
    </errorConditionFormula>
    <errorMessage>
        Please enter a valid RUT format (e.g., 12345678-9 or 12345678-K).
    </errorMessage>
</ValidationRule>