force-app/main/default/objects/Student__c/listViews/All_Students.listView-meta.xml
<ListView>
    <fullName>All_Students</fullName>
    <columns>NAME</columns>
    <columns>Gender__c</columns>
    <columns>RUT__c</columns>
    <columns>AcademicYear__c</columns>
    <columns>UniversityCareer__c</columns>
    <columns>Address__City__s</columns>
    <columns>Address__StateCode__s</columns>
    <columns>Address__CountryCode__s</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All Students</label>
</ListView>